--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -43,20 +43,30 @@
             </a>
         </li>
         <li class="nav-item">
-            <a th:href="@{/team}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Team Panel">
+            <a href="#" class="nav-link" data-toggle="tooltip" data-placement="right" title="Projects">
+                <i class="material-icons-outlined md-36">assessment</i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a th:href="@{/team}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Team">
                 <i class="material-icons-outlined md-36">people</i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link" data-toggle="tooltip" data-placement="right" title="Stock">
+                <i class="material-icons-outlined md-36">shopping_bag</i>
             </a>
         </li>
     </ul>
 
     <ul class="nav flex-column bg-white mb-0 bottom align-items-center">
         <li class="nav-item">
-            <a href="#" class="nav-link disabled" data-toggle="tooltip" data-placement="right" title="Get help">
+            <a href="#" class="nav-link disabled" data-toggle="tooltip" data-placement="right" title="Help">
                 <i class="material-icons-outlined md-36">help_outline</i>
             </a>
         </li>
         <li class="nav-item">
-            <a th:href="@{/adminpanel}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Admin Panel">
+            <a th:href="@{/adminpanel}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Admin">
                 <i class="material-icons-outlined md-36">admin_panel_settings</i>
             </a>
         </li>
