--- a/src/main/resources/templates/fragments/userformfragments.html
+++ b/src/main/resources/templates/fragments/userformfragments.html
@@ -42,6 +42,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
+                                    <label for="employee">Employee</label>
+                                    <select class="custom-select" id="employee" name="employee" disabled>
+                                        <option selected disabled value="">Assigned to...</option>
+
+                                    </select>
+                                <div class="form-group">
                                     <label for="enabled">Active / Inactive</label>
                                     <select class="custom-select" id="enabled" name="enabled" >
                                         <option value="true">Active</option>
@@ -95,7 +101,13 @@
                                         Please select a valid Role
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <label for="employee">Employee</label>
+                                    <select class="custom-select" id="employee" name="employee" disabled>
+                                        <option selected disabled value="">Assigned to...</option>
 
+                                    </select>
+                                </div>
 
                                 <div class="form-group">
                                     <label for="enabled">Active / Inactive</label>
