--- a/src/main/resources/templates/settings/settingspanel.html
+++ b/src/main/resources/templates/settings/settingspanel.html
@@ -20,7 +20,7 @@
             <hr>
         </div>
         <div class="container py-0 px-3 mb-1">
-            <h5>Edit</h5>
+            <h5>View</h5>
             <div><a th:href="@{/settings/countries/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Countries">List of Countries</a></div>
             <div><a th:href="@{/settings/currencies/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Currencies">List of Currencies</a></div>
             <div><a th:href="@{/settings/departments/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Departments">List of Departments</a></div>
