--- a/src/main/resources/templates/team/list-employee.html
+++ b/src/main/resources/templates/team/list-employee.html
@@ -10,34 +10,30 @@
 
     <div th:replace="fragments/layout :: vertical_navbar"></div>
 
-    <div class="page-content p-5">
-        <div class="row">
-            <h3><span class="material-icons-outlined align-baseline">people</span> Team Panel / List of Employees</h3>
-            <div class="col d-flex justify-content-end">
-                <!-- Modal to Create New Employee -->
-                <a class="btn btn-link newBtn" data-toggle="tooltip" data-placement="top" title="Add New Employee">
-                    <i class="material-icons-outlined md-36">person_add</i>
-                </a>
-                <!-- Modal to Edit Employee -->
-                <a class="btn btn-link editBtn" data-toggle="tooltip" data-placement="top" title="Edit Selected Employee">
-                    <i class="material-icons-outlined md-36">edit</i>
-                </a>
-                <!-- Call JQuery to Delete Employee -->
-                <a type="button" class="btn btn-link" id="deleteBtn" data-toggle="tooltip" data-placement="top"
-                   title="Delete Selected Employee" onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
-                    <i class="material-icons-outlined md-36">delete</i>
-                </a>
-                <!-- Refresh User List -->
-                <a th:href="@{/team/employee/list}" class="btn btn-link" data-toggle="tooltip" data-placement="top" title="List Employees">
-                    <i class="material-icons-outlined md-36">list</i>
-                </a>
-            </div>
+    <div class="container border-right" style="width: 20rem; height: 100vh; left: 5rem; position: fixed;">
+        <div class="container py-4 px-3 mb-1">
+            <h3><span class="material-icons-outlined">people</span> Team Panel</h3>
+            <hr>
+            <p>
+                Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
+            </p>
+            <hr>
         </div>
-        <hr>
-        <p>
-            Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
-        </p>
-        <hr>
+        <div class="container py-0 px-3 mb-1">
+            <h5>View</h5>
+            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Employee">List of Employee</a></div>
+            <p></p>
+            <h5>Edit</h5>
+            <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Employee">Add New Employee</a>
+            <a class="btn editBtn" data-toggle="tooltip" data-placement="top" title="Edit Selected Employee">Edit Selected Employee</a>
+            <a type="button" class="btn" id="deleteBtn" data-toggle="tooltip" data-placement="top" title="Delete Selected Employee">Delete Selected Employee</a>
+        </div>
+    </div>
+
+    <div class="toolbar-page-content p-5">
+        <div class="row">
+
+        </div>
         <table class="table table-sm table-striped table-hover" id="employeesTable" style="width:100%">
             <caption>List of Employees</caption>
             <thead>
