--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -10,15 +10,23 @@
 
     <div th:replace="fragments/layout :: vertical_navbar"></div>
 
-    <div class="page-content p-5">
-        <div class="">
-
+    <div class="container border-right" style="width: 20rem; height: 100vh; left: 5rem; position: fixed;">
+        <div class="container py-4 px-3 mb-1">
             <h3><span class="material-icons-outlined">dashboard</span> Dashboard</h3>
             <hr>
             <p>
                 Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
             </p>
             <hr>
+        </div>
+        <div class="container py-0 px-3 mb-1">
+            <h5>View</h5>
+
+        </div>
+    </div>
+
+    <div class="toolbar-page-content p-5">
+        <div class="">
 
         </div>
     </div>
