--- a/src/main/resources/templates/team/teampanel.html
+++ b/src/main/resources/templates/team/teampanel.html
@@ -10,21 +10,26 @@
 
     <div th:replace="fragments/layout :: vertical_navbar"></div>
 
-    <div class="page-content p-5">
-        <div class="row">
+    <div class="container border-right" style="width: 20rem; height: 100vh; left: 5rem; position: fixed;">
+        <div class="container py-4 px-3 mb-1">
             <h3><span class="material-icons-outlined">people</span> Team Panel</h3>
-            <div class="col d-flex justify-content-end">
-                <a th:href="@{/team/employee/list}" class="btn btn-link" data-toggle="tooltip" data-placement="top" title="List Employee">
-                    <i class="material-icons-outlined md-36">list</i>
-                </a>
-            </div>
+            <hr>
+            <p>
+                Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
+            </p>
+            <hr>
+        </div>
+        <div class="container py-0 px-3 mb-1">
+            <h5>View</h5>
+            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Employee">List of Employee</a></div>
+        </div>
+    </div>
+
+    <div class="toolbar-page-content p-5">
+        <div class="row">
+
         </div>
 
-        <hr>
-        <p>
-            Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
-        </p>
-        <hr>
     </div>
 
     <!-- Bootstrap JS -->
