--- a/src/main/resources/templates/team/list-employee.html
+++ b/src/main/resources/templates/team/list-employee.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Employee">List of Employee</a></div>
+            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Employee">List of Employees</a></div>
             <p></p>
             <h5>Edit</h5>
             <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Employee">Add New Employee</a>
