CRUD Module for Projects created

--- a/src/main/resources/templates/fragments/employeeformfragments.html
+++ b/src/main/resources/templates/fragments/employeeformfragments.html
@@ -77,7 +77,7 @@
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
                                             <label for="dateOfEmployment">Date of Employment</label>
-                                            <input type="date" class="form-control" id="dateOfEmployment" name="dateOfEmployment" >
+                                            <input type="date" class="form-control" id="dateOfEmployment" name="dateOfEmployment" required>
                                         </div>
                                     </div>
                                     <h6 style="font-weight: bold">Personal Information</h6>
@@ -229,7 +229,7 @@
                                     <div class="form-row">
                                         <div class="col-md-4 mb-3">
                                             <label for="dateOfEmployment">Date of Employment</label>
-                                            <input type="date" class="form-control" id="dateOfEmployment" name="dateOfEmployment" >
+                                            <input type="date" class="form-control" id="dateOfEmployment" name="dateOfEmployment" required>
                                         </div>
                                     </div>
                                     <h6 style="font-weight: bold">Personal Information</h6>
