--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -43,7 +43,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link" data-toggle="tooltip" data-placement="right" title="Projects">
+            <a th:href="@{/projectpanel}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Projects">
                 <i class="material-icons-outlined md-36">assessment</i>
             </a>
         </li>
