--- a/src/main/resources/templates/projects/projectpanel.html
+++ b/src/main/resources/templates/projects/projectpanel.html
@@ -22,6 +22,8 @@
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
             <div><a th:href="@{/projectpanel/projects/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Projects">List of Projects</a></div>
+            <div><a th:href="@{/projectpanel/quotations/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Quotations">List of Quotations</a></div>
+            <div><a th:href="@{/projectpanel/customers/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Customers">List of Customers</a></div>
         </div>
     </div>
 
