--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -53,8 +53,8 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link" data-toggle="tooltip" data-placement="right" title="Stock">
-                <i class="material-icons-outlined md-36">shopping_bag</i>
+            <a th:href="@{/stockpanel}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Stock">
+                <i class="material-icons-outlined md-36">inventory_2</i>
             </a>
         </li>
     </ul>
