--- a/src/main/resources/templates/settings/settingspanel.html
+++ b/src/main/resources/templates/settings/settingspanel.html
@@ -21,10 +21,10 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/settings/countries/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Countries">List of Countries</a></div>
-            <div><a th:href="@{/settings/currencies/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Currencies">List of Currencies</a></div>
-            <div><a th:href="@{/settings/departments/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Departments">List of Departments</a></div>
-            <div><a th:href="@{/settings/payterms/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Payment Terms List">Payment Terms List</a></div>
+            <div><a th:href="@{/settings/countries/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Countries">Countries</a></div>
+            <div><a th:href="@{/settings/currencies/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Currencies">Currencies</a></div>
+            <div><a th:href="@{/settings/departments/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Departments">Departments</a></div>
+            <div><a th:href="@{/settings/payterms/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Payment Terms List">Payment Terms</a></div>
             <div><a th:href="@{/settings/projectstatuses/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Project Statuses">Project Statuses</a></div>
             <div><a th:href="@{/settings/projecttypes/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Project Types">Project Types</a></div>
             <div><a th:href="@{/settings/quotationstatuses/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Quotation Statuses">Quotation Statuses</a></div>
