--- a/src/main/resources/templates/team/teampanel.html
+++ b/src/main/resources/templates/team/teampanel.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Employee">List of Employees</a></div>
+            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Employees">Employees</a></div>
         </div>
     </div>
 
