--- a/src/main/resources/templates/adminpanel/adminpanel.html
+++ b/src/main/resources/templates/adminpanel/adminpanel.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/adminpanel/users/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Users">List of Users</a></div>
+            <div><a th:href="@{/adminpanel/users/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Users">Users</a></div>
         </div>
     </div>
 
