--- a/src/main/resources/templates/stock/list-suppliers.html
+++ b/src/main/resources/templates/stock/list-suppliers.html
@@ -12,7 +12,7 @@
 
     <div class="container border-right" style="width: 20rem; height: 100vh; left: 5rem; position: fixed;">
         <div class="container py-4 px-3 mb-1">
-            <h3><span class="material-icons-outlined">assessment</span> Project Panel</h3>
+            <h3><span class="material-icons-outlined">inventory_2</span> Stock Panel</h3>
             <hr>
             <p>
                 Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
@@ -21,14 +21,13 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/projectpanel/projects/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Projects">Projects</a></div>
-            <div><a th:href="@{/projectpanel/quotations/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Quotations">Quotations</a></div>
-            <div><a th:href="@{/projectpanel/customers/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Customers">Customers</a></div>
+            <div><a th:href="@{/stockpanel/items/list}"  class="btn" data-toggle="tooltip" data-placement="top" title="List of Items">Items</a></div>
+            <div><a th:href="@{/stockpanel/suppliers/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Suppliers">Suppliers</a></div>
             <p></p>
             <h5>Edit</h5>
-            <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Customer">Add New Customer</a>
-            <a class="btn editBtn" data-toggle="tooltip" data-placement="top" title="Edit Selected Customer">Edit Selected Customer</a>
-            <a type="button" class="btn" id="deleteBtn" data-toggle="tooltip" data-placement="top" title="Delete Selected Customer">Delete Selected Customer</a>
+            <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Supplier">Add New Supplier</a>
+            <a class="btn editBtn" data-toggle="tooltip" data-placement="top" title="Edit Selected Supplier">Edit Selected Supplier</a>
+            <a type="button" class="btn" id="deleteBtn" data-toggle="tooltip" data-placement="top" title="Delete Selected Supplier">Delete Selected Supplier</a>
         </div>
     </div>
 
@@ -36,12 +35,12 @@
         <div class="row">
 
         </div>
-        <table class="table table-sm table-striped table-hover" id="customerTable" style="width:100%">
-            <caption>List of Customers</caption>
+        <table class="table table-sm table-striped table-hover" id="supplierTable" style="width:100%">
+            <caption>List of Supplier</caption>
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Customer Name</th>
+                    <th scope="col">Supplier Name</th>
                     <th scope="col">Created By</th>
                     <th scope="col">Create Date</th>
                     <th scope="col">Updated By</th>
@@ -50,14 +49,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="tempCustomers : ${customers}">
+                <tr th:each="tempSuppliers : ${suppliers}">
                 </tr>
             </tbody>
         </table>
-        <div th:replace="fragments/customerformfragments :: customerform_modals"></div>
+        <div th:replace="fragments/supplierformfragments :: supplierform_modals"></div>
     </div>
 
-    <script type ="text/javascript" th:src="@{/js/customerdatatable.js}" src="../../static/js/customerdatatable.js"></script>
+    <script type ="text/javascript" th:src="@{/js/supplierdatatable.js}" src="../../static/js/supplierdatatable.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
