--- a/src/main/resources/templates/team/list-employee.html
+++ b/src/main/resources/templates/team/list-employee.html
@@ -21,7 +21,7 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Employee">List of Employees</a></div>
+            <div><a th:href="@{/team/employee/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Employees">Employees</a></div>
             <p></p>
             <h5>Edit</h5>
             <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Employee">Add New Employee</a>
@@ -39,8 +39,9 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First Name</th>
-                    <th scope="col">Last Name</th>
+                    <th scope="col">Full Name</th>
+                    <!--<th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>-->
                     <th scope="col">Title</th>
                     <th scope="col">Department</th>
                     <th scope="col">Mobile Phone</th>
