Small additions to Item Entity and CRUD module

--- a/src/main/resources/templates/fragments/itemformfragments.html
+++ b/src/main/resources/templates/fragments/itemformfragments.html
@@ -57,20 +57,26 @@
                                         </div>
                                     </div>
                                     <div class="form-row">
-                                        <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="salesPrice" name="salesPrice" placeholder="Sales price" required>
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="salesPrice" name="salesPrice" placeholder="Sales price">
                                         </div>
-                                        <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="minStockLevel" name="minStockLevel" placeholder="Min level" required>
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="purchasePrice" name="purchasePrice" placeholder="Purchase price">
                                         </div>
-                                        <div class="col-md-3 mb-3">
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="minStockLevel" name="minStockLevel" placeholder="Min level">
+                                        </div>
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="unit" name="unit" placeholder="Unit">
+                                        </div>
+                                        <div class="col-md-2 mb-3">
                                             <select class="custom-select" id="vatId" name="vatId" disabled>
                                                 <option selected disabled value="">Choose VAT...</option>
 
                                             </select>
 
                                         </div>
-                                        <div class="col-md-3 mb-3 ml-auto">
+                                        <div class="col-md-2 mb-3 ml-auto">
                                             <select class="custom-select" name="closed" id="closed">
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
@@ -141,20 +147,26 @@
                                         </div>
                                     </div>
                                     <div class="form-row">
-                                        <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="salesPrice" name="salesPrice" placeholder="Sales price" required>
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="salesPrice" name="salesPrice" placeholder="Sales price">
                                         </div>
-                                        <div class="col-md-3 mb-3">
-                                            <input type="text" class="form-control" id="minStockLevel" name="minStockLevel" placeholder="Min level" required>
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="purchasePrice" name="purchasePrice" placeholder="Purchase price">
                                         </div>
-                                        <div class="col-md-3 mb-3">
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="minStockLevel" name="minStockLevel" placeholder="Min level">
+                                        </div>
+                                        <div class="col-md-2 mb-3">
+                                            <input type="text" class="form-control" id="unit" name="unit" placeholder="Unit">
+                                        </div>
+                                        <div class="col-md-2 mb-3">
                                             <select class="custom-select" id="vatId" name="vatId" disabled>
                                                 <option selected disabled value="">Choose VAT...</option>
 
                                             </select>
 
                                         </div>
-                                        <div class="col-md-3 mb-3 ml-auto">
+                                        <div class="col-md-2 mb-3 ml-auto">
                                             <select class="custom-select" name="closed" id="closed">
                                                 <option selected disabled value="">Is Closed...</option>
                                                 <option value="true">Closed</option>
