--- a/src/main/resources/templates/stock/list-items.html
+++ b/src/main/resources/templates/stock/list-items.html
@@ -43,6 +43,7 @@
                     <th scope="col">Item Name</th>
                     <th scope="col">Item Type</th>
                     <th scope="col">Sales Price</th>
+                    <th scope="col">Purchase Price</th>
                     <th scope="col">Supplier</th>
                     <th scope="col">Closed</th>
                 </tr>
