--- a/src/main/resources/templates/projects/list-quotations.html
+++ b/src/main/resources/templates/projects/list-quotations.html
@@ -24,6 +24,7 @@
             <div><a th:href="@{/projectpanel/projects/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Projects">Projects</a></div>
             <div><a th:href="@{/projectpanel/quotations/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Quotations">Quotations</a></div>
             <div><a th:href="@{/projectpanel/customers/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Customers">Customers</a></div>
+            <div><a th:href="@{/projectpanel/contacts/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Contacts">Contacts</a></div>
             <p></p>
             <h5>Edit</h5>
             <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Quotation">Add New Quotation</a>
