Item, ItemToQuotation, Supplier Modules: - Repository interfaces; - Service interfaces; - Service interface implementations.

--- a/src/main/resources/templates/projects/list-customers.html
+++ b/src/main/resources/templates/projects/list-customers.html
@@ -21,9 +21,10 @@
         </div>
         <div class="container py-0 px-3 mb-1">
             <h5>View</h5>
-            <div><a th:href="@{/projectpanel/projects/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Projects">List of Projects</a></div>
-            <div><a th:href="@{/projectpanel/quotations/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Quotations">List of Quotations</a></div>
-            <div><a th:href="@{/projectpanel/customers/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List Customers">List of Customers</a></div>
+            <div><a th:href="@{/projectpanel/projects/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Projects">Projects</a></div>
+            <div><a th:href="@{/projectpanel/quotations/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Quotations">Quotations</a></div>
+            <div><a th:href="@{/projectpanel/customers/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Customers">Customers</a></div>
+            <div><a th:href="@{/projectpanel/contacts/list}" class="btn" data-toggle="tooltip" data-placement="top" title="List of Contacts">Contacts</a></div>
             <p></p>
             <h5>Edit</h5>
             <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Customer">Add New Customer</a>
