--- a/src/main/resources/templates/settings/list-countries.html
+++ b/src/main/resources/templates/settings/list-countries.html
@@ -5,7 +5,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head th:replace="fragments/layout :: head"></head>
-<title>Setting</title>
+<title>Settings</title>
 <body>
 
     <div th:replace="fragments/layout :: vertical_navbar"></div>
@@ -30,20 +30,37 @@
             <div><a th:href="@{/settings/quotationstatuses/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Quotation Statuses">Quotation Statuses</a></div>
             <div><a th:href="@{/settings/stocktypes/list}" class="btn" data-toggle="tooltip" data-placement="top" title="Stock Types">Stock Types</a></div>
             <div><a th:href="@{/settings/vatvalues/list}" class="btn" data-toggle="tooltip" data-placement="top" title="VAT Values">VAT Values</a></div>
+            <p></p>
+            <h5>Edit</h5>
+            <a class="btn newBtn" data-toggle="tooltip" data-placement="top" title="Add New Country">Add New Country</a>
+            <a class="btn editBtn" data-toggle="tooltip" data-placement="top" title="Edit Selected Country">Edit Selected Country</a>
+            <a type="button" class="btn" id="deleteBtn" data-toggle="tooltip" data-placement="top" title="Delete Selected Country">Delete Selected Country</a>
         </div>
     </div>
+
     <div class="toolbar-page-content p-5">
         <div class="row">
 
         </div>
-
-
+        <table class="table table-sm table-striped table-hover" id="countryTable" style="width:100%">
+            <caption>List of Countries</caption>
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Country Code</th>
+                    <th scope="col">Country Name</th>
+                    <th scope="col">Closed</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="tempCountries : ${countries}">
+                </tr>
+            </tbody>
+        </table>
+        <div th:replace="fragments/countryformfragments :: countryform_modals"></div>
     </div>
 
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
+    <script type ="text/javascript" th:src="@{/js/countrydatatable.js}" src="../../static/js/countrydatatable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
