--- a/src/main/resources/templates/fragments/projectstatusformfragments.html
+++ b/src/main/resources/templates/fragments/projectstatusformfragments.html
@@ -49,7 +49,7 @@
         <!--#Modal for user create-->
         <div class="projectStatusFormCreate">
             <form class="form-signin" th:action="@{save}"  method="post">
-                <div class="modal fade" data-backdrop="static" id="departmentModalCreate" tabindex="-1" role="dialog" aria-labelledby="modalLabelCreate" aria-hidden="true">
+                <div class="modal fade" data-backdrop="static" id="projectStatusModalCreate" tabindex="-1" role="dialog" aria-labelledby="modalLabelCreate" aria-hidden="true">
                     <div class="modal-dialog modal-sm" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
